--- a/templates/webapp/common.html
+++ b/templates/webapp/common.html
@@ -58,8 +58,8 @@
 		<div class="site-top container animated fadeInDown">
 			<div class="site-top-container clearfix ">
 				<div class="col-xs-12 col-md-9 padding-0 logo clearfix animated lightSpeedIn pull-left">
-					<img src="{% static 'img/logo1.png' %}" class="img-responsive img-rounded logo-img-1 pull-left" />
-					<img src="{% static 'img/logo2.png' %}" class="img-responsive img-rounded pull-left logo-img-2 visible-lg" />
+					<a href="/"><img src="{% static 'img/logo1.png' %}" class="img-responsive img-rounded logo-img-1 pull-left" /></a>
+                    <a href="http://www.nystein.com" target="_blank"><img src="{% static 'img/logo2.png' %}" class="img-responsive img-rounded pull-left logo-img-2 visible-lg" /></a>
 					<h3 class="pull-left">Thalez group 泰雷兹科技集团</h3>
 				</div>
 				<div class="col-xs-12 col-md-3  padding-0 search">
